force-app/main/default/objects/marketing__c/marketing__c.object-meta.xml
<CustomObject>
    <label>שיווק</label>
    <nameField>
        <label>חודש</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>שיווק</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>