force-app/main/default/objects/marketing__c/fields/campaign_managment__c.field-meta.xml
<CustomField>
    <fullName>campaign_managment__c</fullName>
    <label>דמי ניהול קמפיין</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>