force-app/main/default/objects/marketing__c/fields/facebook_budget__c.field-meta.xml
<CustomField>
    <fullName>facebook_budget__c</fullName>
    <label>תקציב פייסבוק</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>