force-app/main/default/objects/marketing__c/fields/google_budget__c.field-meta.xml
<CustomField>
    <fullName>google_budget__c</fullName>
    <label>תקציב גוגל</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>