force-app/main/default/objects/marketing__c/fields/total_marketing_budget__c.field-meta.xml
<CustomField>
    <fullName>total_marketing_budget__c</fullName>
    <formula>facebook_budget__c + total_google_budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>תקציב שיווק כולל</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>